fix: dark mode error

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,13 +13,6 @@
   --foreground: #ededed;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   color: var(--foreground);
   background: var(--background);
